--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,6 +2,10 @@
 $body-overflow-y: auto;
 
 $size-1: 5rem;
+$size-2: 4rem;
+$size-3: 3rem;
+$size-4: 2rem;
+$size-5: 1.5rem;
 
 $tint: rgba(0, 0, 0, 0.5);
 
